--- a/package.json
+++ b/package.json
@@ -23,23 +23,20 @@
   ],
   "keywords": [
     "Apache Solr",
-    "OpenLayers 3"
+    "OpenLayers 3",
     "Heatmap"
   ],
   "engines": {
     "node": ">= 0.10.0 && < 0.11.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "build": "grunt build"
   },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-gh-pages": "0.9.1",
-    "grunt-markdown": "^0.5.0"
+    "grunt-gh-pages": "0.9.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
