moved some static API parameters to the config file

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -3,6 +3,10 @@
         "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?",
         "tweetsExportBaseUrl": "http://54.158.101.33:8080/bopws/tweets/export?"
     },
+    "bopwsConfig": {
+        "heatmapFacetLimit": 1000,
+        "csvDocsLimit": 1
+    },
     "mapConfig": {
         "renderer": "canvas",
         "view": {
