--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "1.1.0"
   }
 }
