--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "angular-ui-bootstrap": "^1.3.3",
     "eslint": "^2.13.0",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
