added help functions to compute normalized map extent

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -6,11 +6,8 @@
         "renderer": "canvas",
         "view": {
             "center": [430493, 6887893],
-            "minResolution": 9.554628534317017,
-            "maxResolution": 156543.03390625,
-            "maxZoom": null,
-            "minZoom": 1,
-            "extent": [-20037508.34,-20037508.34,20037508.34,20037508.34],
+            "maxZoom": 10,
+            "minZoom": 2,
             "projection": "EPSG:3857",
             "resolution": null,
             "resolutions": null,
