--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,6 +1,11 @@
 {
     "appConfig": {
-        "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?"
+        "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?",
+        "tweetsExportBaseUrl": "http://54.158.101.33:8080/bopws/tweets/export?"
+    },
+    "bopwsConfig": {
+        "heatmapFacetLimit": 1000,
+        "csvDocsLimit": 1
     },
     "mapConfig": {
         "renderer": "canvas",
