--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -10,14 +10,15 @@
     "mapConfig": {
         "renderer": "canvas",
         "view": {
-            "center": [430493, 6887893],
-            "maxZoom": 10,
-            "minZoom": 2,
+            "center": [0, 0],
+            "extent": [-20026376.39,-20048966.10,20026376.39,20048966.10],
+            "maxZoom": 15,
+            "minZoom": 1,
             "projection": "EPSG:3857",
             "resolution": null,
             "resolutions": null,
             "rotation": null,
-            "zoom": 2,
+            "zoom": 1,
             "zoomFactor": null
         },
         "layers": [{
