reset map if reset button is clicked

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,10 +1,11 @@
 {
     "appConfig": {
         "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?",
-        "tweetsExportBaseUrl": "http://54.158.101.33:8080/bopws/tweets/export?"
+        "tweetsExportBaseUrl": "http://54.158.101.33:8080/bopws/tweets/export?",
+        "ratioInnerBbox": 0.9
     },
     "bopwsConfig": {
-        "heatmapFacetLimit": 1000,
+        "heatmapFacetLimit": 10000,
         "csvDocsLimit": 1
     },
     "mapConfig": {
