--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "Heatmap"
   ],
   "scripts": {
+    "js-lint": "eslint -c .eslintrc ./",
     "deploy": "grunt deploy"
   },
   "dependencies": {},
   "devDependencies": {
     "angular-ui-bootstrap": "^1.3.3",
     "eslint": "^2.13.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.3.0",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -40,6 +43,7 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^19.0.0",
     "grunt-gh-pages": "1.1.0"
   }
 }
