Publish gh-pages (auto)
branch:       master
SHA:          e25d6eba21c40b9a405b2bcef7dea98b10971fb4
range SHA:    b4ebc65c7d65...e25d6eba21c4
build id:     143824763
build number: 56

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -43,5 +43,27 @@
             "opacity": 1,
             "visible": true
         }]
+    },
+    "instructions": {
+      "textsearch": {
+        "toolTitle": "Filter by text",
+        "instruction": "Instruction for text search."
+      },
+      "datepicker": {
+        "toolTitle": "Filter by date",
+        "instruction": "Instruction for datepicker."
+      },
+      "geospatialsearch": {
+        "toolTitle": "Geospatial filter",
+        "instruction": "Instruction for geospatial search field."
+      },
+      "userfilter": {
+        "toolTitle": "Filter by user name",
+        "instruction": "Instruction for user filter."
+      },
+      "export": {
+        "toolTitle": "Export button",
+        "instruction": "Instruction for export button."
+      }
     }
 }
