--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^2.13.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
+    "express": "^4.14.0",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "^1.0.0",
