--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   ],
   "scripts": {
     "js-lint": "eslint -c .eslintrc ./",
+    "serve": "http-server -p 3001",
+    "live-reload": "live-reload --port 9091 ./",
+    "server": "parallelshell 'npm run live-reload -s' 'npm run serve -s'",
     "deploy": "grunt deploy"
   },
   "dependencies": {},
@@ -36,13 +39,15 @@
     "eslint": "^2.13.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
-    "express": "^4.14.0",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-gh-pages": "1.1.0"
+    "grunt-gh-pages": "1.1.0",
+    "http-server": "^0.9.0",
+    "live-reload": "^1.1.0",
+    "parallelshell": "^2.0.0"
   }
 }
