--- a/.eslintrc
+++ b/.eslintrc
@@ -10,15 +10,7 @@
         "location": false,
         "angular": false,
         "solrHeatmapApp": false,
-        "proj4": false,
-
-        "afterEach": false,
-        "beforeEach": false,
-        "describe": false,
-        "document": false,
-        "expect": false,
-        "it": false,
-        "sinon": false
+        "proj4": false
     },
     "rules": {
         "angular/controller_name": 0,
