--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   ],
   "scripts": {
     "js-lint": "eslint -c .eslintrc ./",
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
+    "test:unit": "./node_modules/karma/bin/karma start --browsers PhantomJS --auto-watch",
     "serve": "http-server -p 3001",
     "live-reload": "live-reload --port 9091 ./",
     "server": "parallelshell 'npm run live-reload -s' 'npm run serve -s'",
@@ -35,7 +37,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "angular-mocks": "^1.5.8",
     "angular-ui-bootstrap": "^1.3.3",
+    "angularjs-slider": "^5.5.0",
     "eslint": "^2.13.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
@@ -46,6 +50,11 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "1.1.0",
+    "jasmine-core": "^2.5.0",
+    "karma": "^1.2.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-spec-reporter": "0.0.26",
     "http-server": "^0.9.0",
     "live-reload": "^1.1.0",
     "parallelshell": "^2.0.0"
