--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-mocks": "^1.5.8",
     "angular-ui-bootstrap": "^1.3.3",
     "angularjs-slider": "^5.5.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "eslint": "^2.13.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
@@ -52,6 +53,7 @@
     "grunt-gh-pages": "1.1.0",
     "jasmine-core": "^2.5.0",
     "karma": "^1.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-spec-reporter": "0.0.26",
