Separate compoment and eliminate ng-inlude (#34)
* Separate compoment and eliminate ng-inlude

* Create info service to remove repeated code

* Send instruccion as a key

* Start using `this` instead `$scope`

* fix es-lint coma

* Implement html2js, start directive tests

* Testing directives

* Pending error tests

* Test for infoService

* Use karma-ng-html2js and fix `infoService` test

* Using link function

* Isolating scope

* Rename confusing variables to more semantic

--- a/app/components/.eslintrc
+++ b/app/components/.eslintrc
@@ -8,11 +8,10 @@
     "inject": true
   },
   "rules": {
-    "camelcase": 0,
+    "camelcase": 2,
     "curly": 2,
     "quotes": [2, "single"],
     "semi": [2, "always"],
-    "max-len": 0,
-    "brace-style": 0
+    "max-len": 0
   }
 }
