--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "1.1.0",
+    "grunt-html2js": "^0.3.6",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.5.0",
     "karma": "^1.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-spec-reporter": "0.0.26",
     "less-plugin-clean-css": "^1.5.1",
