--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:unit": "./node_modules/karma/bin/karma start --browsers PhantomJS --auto-watch",
     "serve": "http-server -p 3001",
     "live-reload": "live-reload --port 9091 ./",
-    "server": "parallelshell 'npm run live-reload -s' 'npm run serve -s' 'grunt delta'",
+    "server": "parallelshell 'npm run live-reload -s' 'npm run serve -s' 'grunt dev-watch'",
     "deploy": "grunt deploy"
   },
   "dependencies": {},
