--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,7 +1,7 @@
 {
     "appConfig": {
-        "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?",
-        "tweetsExportBaseUrl": "http://54.158.101.33:8080/bopws/tweets/export?",
+        "tweetsSearchBaseUrl": "http://128.31.24.219/bopws/tweets/search?",
+        "tweetsExportBaseUrl": "http://128.31.24.219/bopws/tweets/export?",
         "ratioInnerBbox": 0.9
     },
     "bopwsConfig": {
