--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -3,7 +3,7 @@
         "tweetsSearchBaseUrl": "http://128.31.24.219/bopws/tweets/search?",
         "tweetsSearchBaseUrl_": "http://54.158.101.33:8080/bopws/tweets/search?",
         "tweetsExportBaseUrl": "http://128.31.24.219/bopws/tweets/export?",
-        "ratioInnerBbox": 1
+        "ratioInnerBbox": 0.98
     },
     "bopwsConfig": {
         "heatmapFacetLimit": 5000,
@@ -12,15 +12,15 @@
     "mapConfig": {
         "renderer": "canvas",
         "view": {
-            "center": [0, 0],
+            "center": [-9707182.048613328, 1585691.7893914054],
             "extent": [-20037508.34,-20037508.34,20037508.34,20037508.34],
             "maxZoom": 15,
-            "minZoom": 1,
+            "minZoom": 3,
             "projection": "EPSG:3857",
             "resolution": null,
             "resolutions": null,
             "rotation": null,
-            "zoom": 2,
+            "zoom": 3,
             "zoomFactor": null
         },
         "layers": [{
