Full screen map issues (#87)
* clean

* Changing box of tweets query

* q.geo query using the bbox, heatmap in all the screen, fixed reset issues

* bounding box fixed

* Fix test in  Full screen map issues, hide red bounding box, fix codeclimate

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "Heatmap"
   ],
   "scripts": {
+    "clean": "grunt clean",
     "js-lint": "eslint ./",
     "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
     "test:unit": "./node_modules/karma/bin/karma start --browsers PhantomJS --auto-watch",
