Allow zooming out date wise (#103)
* Disable  histogram and slider when no data

* Synchronise slider controls with histogram

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,7 +1,6 @@
 {
     "appConfig": {
-        "tweetsSearchBaseUrl": "http://128.31.24.219/bopws/tweets/search?",
-        "tweetsSearchBaseUrl_": "http://54.158.101.33:8080/bopws/tweets/search?",
+        "tweetsSearchBaseUrl": "http://54.158.101.33:8080/bopws/tweets/search?",
         "ratioInnerBbox": 0.98
     },
     "bopwsConfig": {
