--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "test:unit": "./node_modules/karma/bin/karma start --browsers PhantomJS --auto-watch",
     "lintest": "npm run js-lint && npm run test",
     "serve": "http-server -p 3001",
-    "live-reload": "live-reload --port 9091 ./",
-    "server": "parallelshell 'npm run live-reload -s' 'npm run serve -s' 'grunt dev-watch'",
-    "deploy": "grunt deploy"
+    "server": "parallelshell 'npm run serve -s' 'grunt dev-watch -s'",
+    "deploy": "grunt deploy",
+    "publish": "grunt publish"
   },
   "dependencies": {},
   "devDependencies": {
@@ -64,7 +64,6 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-spec-reporter": "0.0.26",
     "less-plugin-clean-css": "^1.5.1",
-    "live-reload": "^1.1.0",
     "parallelshell": "^2.0.0"
   }
 }
