Add  google baseMaps (#110)
* insert googleMaps libraries for openlayers

* fix bbox google-maps errors

* Fix styles and add google terrain basemap

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,9 @@
         "location": false,
         "angular": false,
         "solrHeatmapApp": false,
-        "proj4": false
+        "proj4": false,
+        "olgm": false,
+        "google" : false
     },
     "rules": {
         "angular/controller_name": 0,
