Improve the heatmap contrast (#120)
* Increase the blur, radius and gradient espectre

* add more blue range

* Manipulate ol.layer.heatmap

* classification implemented

* Implement jenks algorithm

* Fix tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
         "proj4": false,
         "olgm": false,
         "google": false,
-        "moment": false
+        "moment": false,
+        "geostats": false
     },
     "rules": {
         "angular/controller_name": 0,
