--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "karma-spec-reporter": "0.0.26",
     "less-plugin-clean-css": "^1.5.1",
     "parallelshell": "^2.0.0"
+  },
+  "dependencies": {
+    "geostats": "^1.5.0"
   }
 }
