--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -26,7 +26,7 @@
                 "backgroundLayer": true,
                 "visible": true
             },{
-                "type": "OSM",
+                "type": "Toner",
                 "backgroundLayer": true,
                 "visible": false
             },{
