131 export button rebirth (#132)
* Add export functions

* Insert expor button and his styles

* Fix linter

* fix export button padding

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,6 +1,7 @@
 {
     "appConfig": {
-        "tweetsSearchBaseUrl": "http://bop.worldmap.harvard.edu/bopws/tweets/search?",
+        "tweetsSearchBaseUrl": "http://bop.worldmap.harvard.edu/bopws2/tweets/search?",
+        "tweetsExportBaseUrl": "http://bop.worldmap.harvard.edu/bopws2/tweets/export?",
         "ratioInnerBbox": 0.98
     },
     "bopwsConfig": {
