Dataverse url button (#134)
* Add dataverse deposit url data to the appConfig.json file and create configuration service

* * Insert the button on the search interface, organize the button panel

* Dumb commit for fix test

* Dumb commit 2

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -6,7 +6,17 @@
     },
     "bopwsConfig": {
         "heatmapFacetLimit": 10000,
-        "csvDocsLimit": 1
+        "csvDocsLimit": 1,
+        "dataverse": {
+            "AllowDataverseDeposit": true,
+            "dataverseDepositUrl": "https://dataverse.harvard.edu/deposit-bop-subset",
+            "subsetRetrievalUrl": "cb=https://bop.cga.edu/get_subset",
+            "parameters": {
+                "time": "{}",
+                "keywords": "{}",
+                "extent": "{}"
+            }
+        }
     },
     "mapConfig": {
         "renderer": "canvas",
