Changed the number of item to be exported (#141)

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,12 +1,12 @@
 {
     "appConfig": {
-        "tweetsSearchBaseUrl": "http://bop.worldmap.harvard.edu/bopws2/tweets/search?",
-        "tweetsExportBaseUrl": "http://bop.worldmap.harvard.edu/bopws2/tweets/export?",
+        "tweetsSearchBaseUrl": "http://bop.worldmap.harvard.edu/bopws/tweets/search?",
+        "tweetsExportBaseUrl": "http://bop.worldmap.harvard.edu/bopws/tweets/export?",
         "ratioInnerBbox": 0.98
     },
     "bopwsConfig": {
         "heatmapFacetLimit": 10000,
-        "csvDocsLimit": 1,
+        "csvDocsLimit": 10000,
         "dataverse": {
             "AllowDataverseDeposit": true,
             "dataverseDepositUrl": "https://dataverse.harvard.edu/deposit-bop-subset",
