Fix the url request and add callback (#140)
* Fix the url request and add callback

* fix js-lint

--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -13,8 +13,9 @@
             "subsetRetrievalUrl": "cb=https://bop.cga.edu/get_subset",
             "parameters": {
                 "time": "{}",
-                "keywords": "{}",
-                "extent": "{}"
+                "text": "{}",
+                "geo": "{}",
+                "user": "{}"
             }
         }
     },
