--- a/config/appConfig.json
+++ b/config/appConfig.json
@@ -1,88 +1,1 @@
-{
-    "appConfig": {
-        "tweetsSearchBaseUrl": "http://bop.worldmap.harvard.edu/bopws/tweets/search?",
-        "tweetsExportBaseUrl": "http://bop.worldmap.harvard.edu/bopws/tweets/export?",
-        "ratioInnerBbox": 0.98
-    },
-    "bopwsConfig": {
-        "heatmapFacetLimit": 10000,
-        "csvDocsLimit": 10000,
-        "dataverse": {
-            "AllowDataverseDeposit": true,
-            "dataverseDepositUrl": "https://dataverse.harvard.edu/deposit-bop-subset",
-            "subsetRetrievalUrl": "cb=https://bop.cga.edu/get_subset",
-            "parameters": {
-                "time": "{}",
-                "text": "{}",
-                "geo": "{}",
-                "user": "{}"
-            }
-        }
-    },
-    "mapConfig": {
-        "renderer": "canvas",
-        "view": {
-            "center": [-9707182.048613328, 1585691.7893914054],
-            "extent": [-20037508.34,-20037508.34,20037508.34,20037508.34],
-            "maxZoom": 20,
-            "minZoom": 3,
-            "projection": "EPSG:3857",
-            "resolution": null,
-            "resolutions": null,
-            "rotation": null,
-            "zoom": 3,
-            "zoomFactor": null
-        },
-        "layers": [{
-                "type": "googleLayer",
-                "backgroundLayer": true,
-                "visible": true
-            },{
-                "type": "Toner",
-                "backgroundLayer": true,
-                "visible": false
-            },{
-            "type": "TileWMS",
-            "backgroundLayer": true,
-            "name": "terrestris OSM WMS",
-            "attribution": "Data © OpenStreetMap contributors <br>(<a href='http://www.openstreetmap.org/copyright'>http://www.openstreetmap.org/copyright)</a>",
-            "logo": {
-                "src": "https://www.terrestris.de/wp-content/uploads/icon_terrestris_tiny.png",
-                "href": "https://www.terrestris.de"
-            },
-            "ratio": null,
-            "resolutions": null,
-            "url": "https://ows.terrestris.de/osm-gray/service",
-            "params": {
-                "LAYERS": "OSM-WMS",
-                "VERSION": "1.1.0",
-                "FORMAT": "image/png"
-            },
-            "crossOrigin": "anonymous",
-            "opacity": 1,
-            "visible": false
-        }]
-    },
-    "instructions": {
-      "textsearch": {
-        "toolTitle": "Filter by text",
-        "instruction": "Instruction for text search."
-      },
-      "datepicker": {
-        "toolTitle": "Filter by date",
-        "instruction": "Instruction for datepicker."
-      },
-      "geospatialsearch": {
-        "toolTitle": "Geospatial filter",
-        "instruction": "Instruction for geospatial search field."
-      },
-      "userfilter": {
-        "toolTitle": "Filter by user name",
-        "instruction": "Instruction for user filter."
-      },
-      "export": {
-        "toolTitle": "Export button",
-        "instruction": "Instruction for export button."
-      }
-    }
-}
+{"appConfig":{"tweetsSearchBaseUrl":"http://bop.worldmap.harvard.edu/bopws/tweets/search?","tweetsExportBaseUrl":"http://bop.worldmap.harvard.edu/bopws/tweets/export","ratioInnerBbox":0.98},"bopwsConfig":{"heatmapFacetLimit":10000,"csvDocsLimit":10000,"dataverse":{"AllowDataverseDeposit":true,"dataverseDepositUrl":"https://dataverse.harvard.edu/deposit-bop-subset","subsetRetrievalUrl":"cb=https://bop.cga.edu/get_subset","parameters":{"time":"{}","text":"{}","geo":"{}","user":"{}"}}},"mapConfig":{"renderer":"canvas","view":{"center":[-9707182.048613328,1585691.7893914054],"extent":[-20037508.34,-20037508.34,20037508.34,20037508.34],"maxZoom":20,"minZoom":3,"projection":"EPSG:3857","resolution":null,"resolutions":null,"rotation":null,"zoom":3,"zoomFactor":null},"layers":[{"type":"googleLayer","backgroundLayer":true,"visible":true},{"type":"Toner","backgroundLayer":true,"visible":false},{"type":"TileWMS","backgroundLayer":true,"name":"terrestris OSM WMS","attribution":"Data © OpenStreetMap contributors <br>(\n                <a href=\"http://www.openstreetmap.org/copyright\">\n                    http://www.openstreetmap.org/copyright)\n                </a>","logo":{"src":"https://www.terrestris.de/wp-content/uploads/icon_terrestris_tiny.png","href":"https://www.terrestris.de"},"ratio":null,"resolutions":null,"url":"https://ows.terrestris.de/osm-gray/service","params":{"LAYERS":"OSM-WMS","VERSION":"1.1.0","FORMAT":"image/png"},"crossOrigin":"anonymous","opacity":1,"visible":false}]}}
