--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "OpenLayers 3",
     "Heatmap"
   ],
+  "engines": {
+    "node": "6.x.x"
+  },
   "scripts": {
     "clean": "grunt clean",
     "settings": "node settings.js",
@@ -36,17 +39,20 @@
     "serve": "http-server -p 3001",
     "server": "parallelshell 'npm run settings' 'npm run serve -s' 'grunt dev-watch -s'",
     "deploy": "npm run settings && grunt deploy",
-    "publish": "npm run settings && grunt publish"
+    "publish": "npm run settings && grunt publish",
+    "start": "npm run deploy && npm run serve"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5",
     "angular-ui-bootstrap": "^1.3.3",
     "angularjs-slider": "^5.5.0",
+    "babel-preset-env": "^1.5.2",
     "codeclimate-test-reporter": "^0.3.3",
     "eslint": "^2.13.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
     "grunt": "1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -64,6 +70,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-spec-reporter": "0.0.26",
     "less-plugin-clean-css": "^1.5.1",
+    "load-grunt-tasks": "^3.5.2",
     "parallelshell": "^2.0.0"
   }
 }
