--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-lint": "eslint ./",
     "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
     "test:unit": "./node_modules/karma/bin/karma start --browsers PhantomJS --auto-watch",
+    "test-chrome": "./node_modules/karma/bin/karma start --single-run --browsers Chrome",
     "lintest": "npm run js-lint && npm run test",
     "serve": "http-server -p 3001",
     "server": "parallelshell 'npm run settings' 'npm run serve -s' 'grunt dev-watch -s'",
@@ -64,11 +65,12 @@
     "grunt-html2js": "^0.3.6",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.5.0",
-    "karma": "^1.2.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-ng-html2js-preprocessor": "^1.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.26",
     "less-plugin-clean-css": "^1.5.1",
     "load-grunt-tasks": "^3.5.2",
